# realworld-django-htmx

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test-django-postgresql.yml  test-django-sqlite.yml  test-e2e.yml  typing.yml
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/accounts/management/commands/: createUser.py
apps/articles/: forms.py  models.py  urls.py  views.py
apps/articles/management/commands/: seed_data.py
apps/articles/migrations/: 0003_alter_article_created.py
apps/articles/templatetags/: markdown_filter.py
apps/comments/: models.py  urls.py  views.py
apps/comments/migrations/: 0002_alter_comment_created.py
config/: settings.py  urls.py
helpers/: context_processors.py  exceptions.py  htmx.py  tests.py
playwright/: playwright.config.ts
static/css/: styles.css
templates/: base.html
templates/accounts/: login.html  profile.html  profile_404.html  register.html  settings.html
templates/articles/: detail.html  detail_404.html  editor.html  home.html
templates/partials/: article_list.html  article_meta.html  comment_list.html  favorite_button.html  feed_content.html  follow_button.html  footer.html  header.html
